compilateurDeca/src/test/deca/context/valid/sans_objet/arithmetic/arith_plus_types.deca
// Description:
//    Vérifie toutes les combinaisons de types pour l'opérateur Plus.
//
// Resultats:
//    Vérification réussie (décoration et ConvFloat)
// 
// Historique:
//    cree le 11/01/2026

{
    int i = 1;
    float f = 1.0;
    float r;

    int res1 = i + i; // Cas int + int -> int
    r = f + f;    // Cas float + float -> float
    r = i + f;   // Cas int + float -> float (ConvFloat à gauche)
    r = f + i;  // Cas float + int -> float (ConvFloat à droite)
}