compilateurDeca/src/test/deca/context/invalid/objet/operation/not_objet.deca
// Description:
//    Test de contexte : Opérateur unaire NOT (!) sur un objet.
//
// Resultats:
//    Erreur contextuelle : Type A invalide pour l'opérateur unaire '!'.
//
// Historique:
//    cree le 13/01/2026

class A {}
{
    A a = new A();
    if (!a) {}
}